--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "back_end",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.14.2"
+  },
   "description": "Project 3 Back_End",
   "main": "server.js",
   "scripts": {
