--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-MONGODB_URI=mongodb+srv://admin:gamesgamesgame@cluster0.l2jktw4.mongodb.net/?retryWrites=true&w=majority
-
-
+MONGODB_URI=mongodb+srv://admin:gamesgamesgames@cluster0.l2jktw4.mongodb.net/?retryWrites=true&w=majority
 PORT=3000
