front end functional locally, needs to be linked to heroku. light div arrangement for wireframe layout, added img but ideally would like to work it in with gifs and stuff

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-
-MONGODB_URI=mongodb+srv://admin:gamesgamesgames@cluster0.l2jktw4.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://lanny:wioWn5i2oivTchxx@cluster0.l2jktw4.mongodb.net/?retryWrites=true&w=majority
 PORT=3000
 
