--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "back_end",
   "version": "1.0.0",
   "engines": {
-
-
     "node": "16.14.2"
-
   },
   "description": "Project 3 Back_End",
   "main": "server.js",
@@ -28,11 +25,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-
-    "mongo": "^0.1.0",
-
     "method-override": "^3.0.0",
-
-    "mongoose": "^6.3.4"
+    "mongo": "^0.1.0",
+    "mongoose": "^6.3.4",
+    "socket.io": "^4.5.1"
   }
 }
