--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http": "^0.0.1-security",
+    "io": "^1.0.5",
     "method-override": "^3.0.0",
     "mongo": "^0.1.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "server": "^1.0.37",
+    "socket.io": "^4.5.1"
   }
 }
